Closed Bug 1865065 Opened 2 years ago Closed 2 years ago

New wpt failure in /css/css-contain/content-visibility/content-visibility-on-g.html

Categories

(Core :: Layout, defect, P5)

defect

Tracking

()

RESOLVED FIXED
122 Branch
Tracking Status
firefox122 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: fwang)

References

(Blocks 1 open bug)

Details

(Keywords: intermittent-failure, intermittent-testcase)

Attachments

(1 file)

Summary: New wpt failure in /css/css-contain/content-visibility/content-visibility-on-g.html | single tracking bug → New wpt failure in /css/css-contain/content-visibility/content-visibility-on-g.html

Seems to be specified in

https://drafts.csswg.org/css-contain/#content-visibility + https://drafts.csswg.org/css-contain/#contain-applies

and nsStyleStruct.cpp already has some logic on which we can rely.

Assignee: nobody → fwang
Attachment #9366100 - Attachment description: WIP: Bug 1865065 - content-visibility should not apply to SVG elements. r=emilio,#style → WIP: Bug 1865065 - Do not apply content-visibility to frames with NS_FRAME_SVG_LAYOUT set. r=emilio,#style
Attachment #9366100 - Attachment description: WIP: Bug 1865065 - Do not apply content-visibility to frames with NS_FRAME_SVG_LAYOUT set. r=emilio,#style → Bug 1865065 - Do not apply content-visibility to frames with NS_FRAME_SVG_LAYOUT set. r=emilio,#style
Pushed by fred.wang@free.fr: https://hg.mozilla.org/integration/autoland/rev/120432262a8c Do not apply content-visibility to frames with NS_FRAME_SVG_LAYOUT set. r=emilio,firefox-style-system-reviewers
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 122 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: