Bug 1865065 - Do not apply content-visibility to frames with NS_FRAME_SVG_LAYOUT set. r=emilio,firefox-style-system-reviewers

The CSS containment spec [1] indicates that `content-visibility` applies
to "elements for which size containment can apply" and additionally
(1) "in the case of SVG2, the `contain` property only applies to `<svg>`
elements that have an associated CSS layout box".
(2) "size containment has no effect" for misc cases on CSS boxes.

Currently, we properly do (1) (via the NS_FRAME_SVG_LAYOUT flag)
and (2) (via the `PrecludesSizeContainmentOrContentVisibilityWithFrame`)
for size containment, but only exclude the latter for
`content-visibility`. This patch makes sure also do (1) and update
comments to refer to relevant text from the spec.

Differential Revision: https://phabricator.services.mozilla.com/D194995